force-app/main/default/objects/AV_ProductClient__c/AV_ProductClient__c.object-meta.xml
<CustomObject>
    <description>Objeto que contiene la información relaciona de los productos contratados por el cliente.
Almacena la tenencia y potencialidad de los PF del cliente.</description>
    <label>ProductoFicha-Cliente</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Producto-Cliente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductoFicha-Cliente</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>