force-app/main/default/objects/AV_ProductClient__c/fields/AV_Cliente__c.field-meta.xml
<CustomField>
    <fullName>AV_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cliente relacionado</description>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ProductoFicha-Cliente</relationshipLabel>
    <relationshipName>ProductoFicha_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>