force-app/main/default/objects/AV_ProductClient__c/fields/AV_ImportePreconcedido__c.field-meta.xml
<CustomField>
    <fullName>AV_ImportePreconcedido__c</fullName>
    <description>Importe del preconcedido para el producto ficha del cliente</description>
    <label>Importe Preconcedido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>