force-app/main/default/objects/AV_ProductClient__c/fields/AV_Potencialidad__c.field-meta.xml
<CustomField>
    <fullName>AV_Potencialidad__c</fullName>
    <description>Valor de potencialidad del PF</description>
    <label>Potencialidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Potencial</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>Sin potencial</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>No informado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>