force-app/main/default/objects/AV_ProductClient__c/fields/AV_ProductoFicha__c.field-meta.xml
<CustomField>
    <fullName>AV_ProductoFicha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PF relacionado</description>
    <label>Producto Ficha</label>
    <referenceTo>AV_ProductExperience__c</referenceTo>
    <relationshipLabel>ProductoFicha-Cliente</relationshipLabel>
    <relationshipName>ProductoFicha_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>