force-app/main/default/objects/AV_ProductClient__c/fields/AV_Target__c.field-meta.xml
<CustomField>
    <fullName>AV_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicador de mejora de prima</description>
    <label>Mejora de prima</label>
    <type>Checkbox</type>
</CustomField>