force-app/main/default/objects/AV_ProductClient__c/fields/AV_TenenciaProducto__c.field-meta.xml
<CustomField>
    <fullName>AV_TenenciaProducto__c</fullName>
    <description>Valor de tenencia del PF</description>
    <label>Situación Actual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>No tiene Producto</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tiene Producto</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tuvo Producto</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>No interesado/a en el producto</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>No tiene + Info de otras entidades</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Tiene + Info de otras entidades</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Tuvo + Info en otras entidades</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>No apto + Info de otras entidades</label>
            </value>
            <value>
                <fullName>AV_IcoTieneParcial</fullName>
                <isActive>false</isActive>
                <label>Tiene y puede tener más producto/s</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>