force-app/main/default/objects/AV_ProductClient__c/fields/AV_TieneOportunidad__c.field-meta.xml
<CustomField>
    <fullName>AV_TieneOportunidad__c</fullName>
    <description>Lista de valores que indica si tiene oportunidad, si se puede ofrecer o si ha sido rechazado por el cliente.</description>
    <label>Tiene Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OFERT</fullName>
                <label>Producto a ofertar</label>
            </value>
            <value>
                <fullName>OPORT</fullName>
                <label>Oportunidad</label>
            </value>
            <value>
                <fullName>RECHZ</fullName>
                <label>Producto rechazado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>