force-app/main/default/objects/AV_ProductClient__c/recordTypes/AV_ProductoFichaCliente.recordType-meta.xml
<RecordType>
    <fullName>AV_ProductoFichaCliente</fullName>
    <active>true</active>
    <label>ProductoFicha Cliente</label>
</RecordType>